<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="model"
            type="com.dionysun.ktodo.viewmodel.TodoItemAddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddTodoFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10218978" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


        <TextView
            android:textColor="@color/colorDark"
            android:id="@+id/editTextDeadLine"
            android:layout_width="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:autofillHints="@string/deadline"
            android:clickable="true"
            android:ems="10"
            android:focusable="true"
            android:padding="8dp"
            android:text="@{model.calendar}"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/editTextContent" />

        <EditText
            android:id="@+id/editTextContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:autofillHints="@string/event"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/event"
            android:inputType="text"
            android:text="@={model.todoItem.content}"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <EditText
            android:id="@+id/editTextEvent2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="132dp"
            android:autofillHints="@string/event"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="text"
            android:text="@={model.todoItem.description}"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:textColor="@color/colorDark"
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="10dp"
            android:text="@string/deadline"
            app:layout_constraintBottom_toTopOf="@+id/editTextDeadLine"
            app:layout_constraintStart_toStartOf="@+id/editTextDeadLine" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/colorDark"
            android:layout_marginBottom="10dp"
            android:text="@string/event"
            app:layout_constraintBottom_toTopOf="@+id/editTextContent"
            app:layout_constraintStart_toStartOf="@+id/editTextContent" />

        <TextView
            android:textColor="@color/colorDark"
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="10dp"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/editTextEvent2"
            app:layout_constraintStart_toStartOf="@+id/guideline6" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:alpha="0.5"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/colorDark"
            app:layout_constraintBottom_toBottomOf="@+id/editTextDeadLine"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/editTextDeadLine"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/colorLight"
            android:layout_marginTop="500dp"
            android:contentDescription="@android:string/ok"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:srcCompat="@drawable/ic_check_green_50dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>